fix: hide arrow on mobile

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -67,6 +67,13 @@ input, textarea{
     border: solid black !important;
     border-width: 0 3px 3px 0 !important;
     padding: 3px !important;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    cursor: pointer;
+
 }
 .slick-prev:before, .slick-next:before{
     content: '' !important;
